src/objects/SPIFF_Claim__c.object
<CustomObject>
    <fields>
        <fullName>Allow_selecting_different_gift__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to allow selecting a Gift different from the Preferred Gift.</inlineHelpText>
        <label>Allow selecting different gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Hardware__c</fullName>
        <formula>Opportunity__r.Amount_Hardware__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount: Hardware</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Storage_Arrays__c</fullName>
        <formula>Opportunity__r.Amount_Storage_Arrays__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount: Storage Arrays</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appointments_Completed_By__c</fullName>
        <formula>SPIFF_Reference__r.Appointments_Completed_By__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointments Completed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CH_Partner_Certification_Level__c</fullName>
        <formula>TEXT( Opportunity__r.Reseller_Account__r.CH_Partner_Certification_Level__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CH Partner Certification Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Reg_Submit_Date_End__c</fullName>
        <formula>SPIFF_Reference__r.CH_Reg_Submit_Date_End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CH Reg Submit Date (End)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CH_Reg_Submit_Date_Start__c</fullName>
        <formula>SPIFF_Reference__r.CH_Reg_Submit_Date_Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CH Reg Submit Date (Start)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CH_Reg_Submit_Date__c</fullName>
        <label>CH Registration Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Channel_Deal_Type__c</fullName>
        <formula>Opportunity__r.Channel_Deal_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Deal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Deal_Type_ref__c</fullName>
        <formula>TEXT(SPIFF_Reference__r.Channel_Deal_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Deal Type (ref)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claim Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim_Status__c</fullName>
        <label>Claim Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate (Notified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claims_Accepted_Through__c</fullName>
        <formula>SPIFF_Reference__r.Claims_Accepted_Through__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claims Accepted Through</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <label>Confirmation Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Opportunity__r.Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Account Billing Country</inlineHelpText>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Date_shadow_SFDC_TEST__c</fullName>
        <formula>CreatedDate</formula>
        <label>Create Date (shadow) SFDC TEST</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Create_Date_shadow__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Date (shadow)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Currency_Code_Opportunity__c</fullName>
        <formula>TEXT( Opportunity__r.CurrencyIsoCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Code (Opportunity)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code_SPIFF_Claim__c</fullName>
        <formula>TEXT( CurrencyIsoCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Code (SPIFF Claim)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code_SPIFF_Reference__c</fullName>
        <formula>SPIFF_Reference__r.Currency_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Code (SPIFF Reference)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name_webform__c</fullName>
        <label>Customer Name (webform)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Maintenance_Code__c</fullName>
        <label>Data Maintenance Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Disqualified__c</fullName>
        <label>Date Disqualified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_from_Reg_Date_to_FMQ_Date_1__c</fullName>
        <formula>Days_from_Reg_Date_to_Frst_Mtg_Qual_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Reg Date to FMQ Date - 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Reg_Date_to_Frst_Mtg_Qual_Date__c</fullName>
        <formula>SPIFF_Reference__r.Days_from_Reg_Date_to_Frst_Mtg_Qual_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Reg Date to Frst Mtg Qual Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Registration_ID_webform__c</fullName>
        <label>Deal Registration ID (webform)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Info__c</fullName>
        <label>Duplicate Info</label>
        <picklist>
            <picklistValues>
                <fullName>Same DRID Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same DRID Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duplicate_Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eval_All_Pass_Rev_1__c</fullName>
        <formula>IF( RecordType.Name = &quot;Incentive Claim Form Rev-1&quot;, 
    IF( Eval_Opportunity_Type__c +
        Eval_Opportunity_Stage__c + 
        Eval_Oppty_First_Mtg_Source__c + 
        Eval_Reg_Submit_Date__c + 
        Eval_First_Mtg_Qual_Date_range__c + 
        Eval_Lead_Status__c +
        Eval_First_Mtg_Qual_Date_max__c +
        Eval_Claim_Submission_Date__c +
        Eval_Channel_Deal_Type__c = 9, TRUE, FALSE), FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval All Pass Rev-1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eval_All_Pass_Rev_3__c</fullName>
        <formula>IF( RecordType.Name = &quot;Incentive Claim Form Rev-3&quot;, 
IF( Eval_Opportunity_Type__c +
Eval_Opportunity_Stage_1__c + 
Eval_Oppty_First_Mtg_Source__c + 
Eval_Reg_Submit_Date__c + 
Eval_Lead_Status__c +
Eval_Claim_Submission_Date__c +
Eval_Oppty_Close_Date__c +
Eval_Hardware_Amount__c +
Eval_Channel_Deal_Type__c = 9, TRUE, FALSE), FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval All Pass Rev-3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eval_All_Pass_Rev_4__c</fullName>
        <formula>IF( RecordType.Name = &quot;Incentive Claim Form Rev-4&quot;, 
IF( Eval_Opportunity_Type__c + 
Eval_Opportunity_Stage_1__c + 
Eval_Oppty_First_Mtg_Source__c + 
Eval_Reg_Submit_Date__c + 
Eval_Lead_Status__c + 
Eval_Claim_Submission_Date__c + 
Eval_Oppty_Close_Date__c + 
Eval_Amount__c + 
Eval_Channel_Deal_Type__c = 9, TRUE, FALSE), FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval All Pass Rev-4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eval_Amount1__c</fullName>
        <formula>IF( Eval_Amount__c = 1, 
IMAGE( SPIFF_Reference__r.Image_Eval_Met__c , &quot;Met&quot;), 
IMAGE( SPIFF_Reference__r.Image_Eval_Not_Met__c , &quot;Not Met&quot;) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Amount.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Amount__c</fullName>
        <label>Eval Amount</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eval_Amount_shadow__c</fullName>
        <formula>IF ( Eval_Amount__c = 1, &quot;Met&quot;, &quot;Not Met&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Amount (shadow)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Channel_Deal_Type1__c</fullName>
        <formula>IF(  Eval_Channel_Deal_Type__c = 1, 
IMAGE( SPIFF_Reference__r.Image_Eval_Met__c , &quot;Met&quot;), 
IMAGE( SPIFF_Reference__r.Image_Eval_Not_Met__c , &quot;Not Met&quot;) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Channel Deal Type.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Channel_Deal_Type__c</fullName>
        <label>Eval Channel Deal Type</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eval_Claim_Submission_Date1__c</fullName>
        <formula>IF(  Eval_Claim_Submission_Date__c = 1, 
IMAGE( SPIFF_Reference__r.Image_Eval_Met__c , &quot;Met&quot;), 
IMAGE( SPIFF_Reference__r.Image_Eval_Not_Met__c , &quot;Not Met&quot;) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Claim Submission Date.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Claim_Submission_Date_Shadow__c</fullName>
        <formula>IF ( Eval_Claim_Submission_Date__c = 1, &quot;Met&quot;, &quot;Not Met&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Claim Submission Date (Shadow)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Claim_Submission_Date__c</fullName>
        <label>Eval Claim Submission Date</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eval_First_Mtg_Qual_Date_Shadow__c</fullName>
        <formula>IF ( Eval_First_Mtg_Qual_Date_range__c = 1, &quot;Met&quot;, &quot;Not Met&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval First Mtg Qual Date (Shadow)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_First_Mtg_Qual_Date_max1__c</fullName>
        <formula>IF(  Eval_First_Mtg_Qual_Date_max__c = 1, 
IMAGE( SPIFF_Reference__r.Image_Eval_Met__c , &quot;Met&quot;), 
IMAGE( SPIFF_Reference__r.Image_Eval_Not_Met__c , &quot;Not Met&quot;) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval First Mtg Qual Date (max).</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_First_Mtg_Qual_Date_max_Shadow__c</fullName>
        <formula>IF ( Eval_First_Mtg_Qual_Date_max__c = 1, &quot;Met&quot;, &quot;Not Met&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval First Mtg Qual Date (max) (Shadow)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_First_Mtg_Qual_Date_max__c</fullName>
        <label>Eval First Mtg Qual Date (max)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eval_First_Mtg_Qual_Date_range1__c</fullName>
        <formula>IF(  Eval_First_Mtg_Qual_Date_range__c = 1, 
IMAGE( SPIFF_Reference__r.Image_Eval_Met__c , &quot;Met&quot;), 
IMAGE( SPIFF_Reference__r.Image_Eval_Not_Met__c , &quot;Not Met&quot;) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval First Mtg Qual Date (range).</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_First_Mtg_Qual_Date_range__c</fullName>
        <label>Eval First Mtg Qual Date (range)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eval_Hardware_Amount1__c</fullName>
        <formula>IF( Eval_Hardware_Amount__c = 1, 
IMAGE( SPIFF_Reference__r.Image_Eval_Met__c , &quot;Met&quot;), 
IMAGE( SPIFF_Reference__r.Image_Eval_Not_Met__c , &quot;Not Met&quot;) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Hardware Amount.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Hardware_Amount__c</fullName>
        <label>Eval Hardware Amount</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eval_Hardware_Amount_shadow__c</fullName>
        <formula>IF ( Eval_Hardware_Amount__c = 1, &quot;Met&quot;, &quot;Not Met&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Hardware Amount (shadow)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Lead_Status1__c</fullName>
        <formula>IF(  Eval_Lead_Status__c = 1, 
IMAGE( SPIFF_Reference__r.Image_Eval_Met__c , &quot;Met&quot;), 
IMAGE( SPIFF_Reference__r.Image_Eval_Not_Met__c , &quot;Not Met&quot;) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Lead Status.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Lead_Status_Shadow__c</fullName>
        <formula>IF ( Eval_Lead_Status__c = 1, &quot;Met&quot;, &quot;Not Met&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Lead Status (Shadow)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Lead_Status__c</fullName>
        <label>Eval Lead Status</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eval_Opportunity_Stage1__c</fullName>
        <formula>IF(  Eval_Opportunity_Stage__c = 1,
IMAGE( SPIFF_Reference__r.Image_Eval_Met__c , &quot;Met&quot;), 
IMAGE( SPIFF_Reference__r.Image_Eval_Not_Met__c , &quot;Not Met&quot;) 
 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Opportunity Stage.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Opportunity_Stage_1__c</fullName>
        <label>Eval Opportunity Stage (1)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eval_Opportunity_Stage_1_shadow__c</fullName>
        <formula>IF ( Eval_Opportunity_Stage_1__c = 1, &quot;Met&quot;, &quot;Not Met&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Opportunity Stage (1) (shadow)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Opportunity_Stage_1a__c</fullName>
        <formula>IF( Eval_Opportunity_Stage_1__c = 1,
IMAGE( SPIFF_Reference__r.Image_Eval_Met__c , &quot;Met&quot;), 
IMAGE( SPIFF_Reference__r.Image_Eval_Not_Met__c , &quot;Not Met&quot;) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Opportunity Stage (1).</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Opportunity_Stage_Shadow__c</fullName>
        <formula>IF ( Eval_Opportunity_Stage__c = 1, &quot;Met&quot;, &quot;Not Met&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Opportunity Stage (Shadow)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Opportunity_Stage__c</fullName>
        <label>Eval Opportunity Stage</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eval_Opportunity_Type1__c</fullName>
        <formula>IF(  Eval_Opportunity_Type__c  = 1, 
IMAGE( SPIFF_Reference__r.Image_Eval_Met__c , &quot;Met&quot;), 
IMAGE( SPIFF_Reference__r.Image_Eval_Not_Met__c , &quot;Not Met&quot;) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Opportunity Type.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Opportunity_Type_Shadow__c</fullName>
        <formula>IF ( Eval_Opportunity_Type__c = 1 , &quot;Met&quot;, &quot;Not Met&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Opportunity Type (Shadow)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Opportunity_Type__c</fullName>
        <label>Eval Opportunity Type</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eval_Opportunity_Type_wip__c</fullName>
        <formula>OR(Oppty_Type__c = Opportunity_Type_Ref__c,Oppty_Type__c = Opportunity_Type_2_Ref__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Opportunity Type (wip)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eval_Oppty_Close_Date1__c</fullName>
        <formula>IF( Eval_Oppty_Close_Date__c = 1, 
IMAGE( SPIFF_Reference__r.Image_Eval_Met__c , &quot;Met&quot;), 
IMAGE( SPIFF_Reference__r.Image_Eval_Not_Met__c , &quot;Not Met&quot;) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Oppty Close Date.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Oppty_Close_Date__c</fullName>
        <label>Eval Oppty Close Date</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eval_Oppty_Close_Date_shadow__c</fullName>
        <formula>IF ( Eval_Oppty_Close_Date__c = 1, &quot;Met&quot;, &quot;Not Met&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Oppty Close Date (shadow)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Oppty_First_Mtg_Source1__c</fullName>
        <formula>IF(  Eval_Oppty_First_Mtg_Source__c = 1, 
IMAGE( SPIFF_Reference__r.Image_Eval_Met__c , &quot;Met&quot;), 
IMAGE( SPIFF_Reference__r.Image_Eval_Not_Met__c , &quot;Not Met&quot;) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Oppty First Mtg Source.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Oppty_First_Mtg_Source__c</fullName>
        <label>Eval Oppty First Mtg Source</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eval_Reg_Submit_Date1__c</fullName>
        <formula>IF(  Eval_Reg_Submit_Date__c = 1, 
IMAGE( SPIFF_Reference__r.Image_Eval_Met__c , &quot;Met&quot;), 
IMAGE( SPIFF_Reference__r.Image_Eval_Not_Met__c , &quot;Not Met&quot;) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Reg Submit Date.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Reg_Submit_Date_Shadow__c</fullName>
        <formula>IF ( Eval_Reg_Submit_Date__c = 1, &quot;Met&quot;, &quot;Not Met&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Reg Submit Date (Shadow)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Reg_Submit_Date__c</fullName>
        <label>Eval Reg Submit Date</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eval_Source_is_Channel_DealType_FMS__c</fullName>
        <formula>IF ( Eval_Channel_Deal_Type__c = 1, 
    IF ( Eval_Oppty_First_Mtg_Source__c = 1, &quot;Met&quot;, &quot;Not Met&quot;)
    , &quot;Not Met&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Source is Channel (DealType&amp;FMS)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_Result1__c</fullName>
        <formula>IF( Evaluation_Result__c = &quot;Approve&quot;, 
    IMAGE( SPIFF_Reference__r.Image_Eval_Met__c , &quot;Met&quot;),
    IF( Evaluation_Result__c = &quot;Disqualify&quot;, 
        IMAGE( SPIFF_Reference__r.Image_Eval_Not_Met__c , &quot;Not Met&quot;),
        IMAGE(  SPIFF_Reference__r.Image_Eval_WIP__c, &quot;WIP&quot;) 
      )
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evaluation Result.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_Result__c</fullName>
        <label>Evaluation Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_Result_old__c</fullName>
        <formula>CASE(Duplicate_Info__c,
     &quot;N/A&quot;, CASE(Internal_Status__c, 
                 &quot;Submitted&quot;, &quot;Pending&quot;, 
                 &quot;Resolved&quot;, IF(Eval_All_Pass_Rev_1__c = TRUE, &quot;Approve&quot;, 
                                IF(Eval_All_Pass_Rev_3__c = TRUE, &quot;Approve&quot;,
                             &quot;Disqualify&quot;)), 
                 IF(Lead_Status__c &lt;&gt; Lead_Status_Ref__c, &quot;Disqualify&quot;, 
                    &quot;Review - Unresolved&quot;)
                 ),
     &quot;Review - Duplicate&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evaluation Result (old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMSR__c</fullName>
        <formula>TEXT( SPIFF_Reference__r.FMS__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Meeting Source (Ref)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMS__c</fullName>
        <formula>TEXT( Opportunity__r.First_Meeting_Source__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Meeting Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Meeting_Date__c</fullName>
        <formula>Opportunity__r.First_Meeting_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Meeting_Qual_Date__c</fullName>
        <formula>Opportunity__r.First_Meeting_Qualification_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Meeting Qualification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Date__c</fullName>
        <label>Fulfillment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Vendor__c</fullName>
        <label>Fulfillment Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Card_Number_AE__c</fullName>
        <label>Gift Card Number - AE</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gift_Card_Number_SE__c</fullName>
        <label>Gift Card Number - SE</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gift_Card_Number__c</fullName>
        <label>Gift Card Number</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gift_Card_URL_AE__c</fullName>
        <label>Gift Card URL - AE</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Gift_Card_URL_SE__c</fullName>
        <label>Gift Card URL - SE</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Gift_Card_URL__c</fullName>
        <label>Gift Card URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Gift_Currency_webform__c</fullName>
        <label>Gift Currency (webform)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Delivery__c</fullName>
        <label>Gift Delivery</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tangible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Via Reseller Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gift_Value__c</fullName>
        <label>Gift Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift__c</fullName>
        <label>Gift</label>
        <picklist>
            <controllingField>Gift_Delivery__c</controllingField>
            <picklistValues>
                <fullName>Amazon CAD 400 Gift Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon EUR 300 Gift Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon EUR 35 Gift Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon EUR 70 Gift Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon GBP 270 Gift Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon GBP 30 Gift Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon GBP 60 Gift Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon USD 100 Gift Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon USD 50 Gift Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Airlines E-gift card (USD 200)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Airlines e-Gift Card (USD 350)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Airlines USD 400 Gift Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Buy E-gift card (USD 200)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash USD 200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash USD 400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Darden Restaurants E-gift card (USD 200)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPad Mini 16GB Wi-Fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll cash disbursement (USD 200)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll cash disbursement  (USD 350)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll cash disbursement (USD 400)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest Airlines e-Gift Card (USD 350)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa e-Gift Card (USD 350)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa e-Gift Card USD 1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa e-Gift Card USD 200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa e-Gift Card USD 400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa e-Gift Card USD 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa Pre-paid AUD 400 Gift Card or Equivalent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Status__c</fullName>
        <label>Internal Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRID not found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unconverted Lead (no Oppty)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted Lead (no Oppty)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Company__c</fullName>
        <label>Lead Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <label>Lead ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Name__c</fullName>
        <label>Lead Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Ref__c</fullName>
        <formula>TEXT( SPIFF_Reference__r.Lead_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status (Ref)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Update_DRID__c</fullName>
        <label>Manual Update - DRID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Update_Lead_ID__c</fullName>
        <label>Manual Update - Lead ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_Ref__c</fullName>
        <formula>SPIFF_Reference__r.Opportunity_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount (Ref)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date_Ref__c</fullName>
        <formula>SPIFF_Reference__r.Opportunity_Close_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date (Ref)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
</CustomObject>